--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:name="jp.co.cyberagent.android.gpuimage.sample.activity.ActivityVideo"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name=".audiotest.HWRecorderActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
