- Add samples for recoding camera with gpu image effects. - Try to work recording audio when capture camera.

--- a/sample/AndroidManifest.xml
+++ b/sample/AndroidManifest.xml
@@ -28,6 +28,11 @@
             android:name="jp.co.cyberagent.android.gpuimage.sample.activity.ActivityCamera"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name="jp.co.cyberagent.android.gpuimage.sample.activity.ActivityCameraRecording"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="jp.co.cyberagent.android.gpuimage.sample.activity.ActivityVideo"
             android:screenOrientation="portrait"
